refactor: some modules

--- a/src/admin/admin.html
+++ b/src/admin/admin.html
@@ -4,7 +4,7 @@
   <h1>Register Arrival Record</h1>
 
   <form class="form-group">
-    <mdc-text-field value.bind="arrival.userId"
+    <mdc-text-field value.bind="arrival.uid"
         outlined="true" focused="true" required="true">
       <i slot="leading-icon" class="material-icons">person</i>
       User ID
