--- a/src/login.html
+++ b/src/login.html
@@ -1,8 +1,10 @@
 <template>
   <require from="firebaseui/dist/firebaseui.css"></require>
 
-  <h1>Welcome to Gotch Wars</h1>
+  <section>
+    <h1>Welcome to Gotch Wars</h1>
 
-  <div id="firebaseui-auth-container"></div>
-  <div id="loader">Loading...</div>
+    <div id="firebaseui-auth-container"></div>
+  </section>
+
 </template>
