--- a/src/app.html
+++ b/src/app.html
@@ -1,19 +1,28 @@
 <template>
   <require from="material-components-web/dist/material-components-web.css"></require>
   <require from="./app.scss"></require>
-  <require from="nav-bar"></require>
+  <require from="./nav-bar"></require>
+  <require from="./login"></require>
 
-  <nav-bar>
-    <mdc-linear-progress
-      if.bind="router.isNavigating"
-      open.bind="true"
-      indeterminate.bind="true"
-      buffer.bind="0.6"
-      class="linear-progress-secondary">
-    </mdc-linear-progress>
+  <header>
+    <nav-bar></nav-bar>
+  </header>
 
-    <main>
-      <router-view></router-view>
-    </main>
-  </nav-bar>
+
+  <mdc-linear-progress
+    if.bind="router.isNavigating"
+    open.bind="true"
+    indeterminate.bind="true"
+    buffer.bind="0.6"
+    class="linear-progress-secondary">
+  </mdc-linear-progress>
+
+
+  <main>
+    <article>
+      <router-view if.bind="auth.isLoggedIn"></router-view>
+
+      <login else></login>
+    </article>
+  </main>
 </template>
