--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -1,43 +1,37 @@
 <template>
   <require from="./nav-bar.scss"></require>
+  <require from="./resources/value-converters/auth-route-filter"></require>
 
-  <div class="container-persistent-body">
-    <!-- SIDE DRAWER AREA -->
-    <mdc-drawer-persistent open.bind="open" on-open.delegate="onOpen()" on-close.delegate="onClose()">
-      <mdc-list tag="nav" click.delegate="toggleMenu()">
-        <!-- <mdc-list-item href.bind="row.href" repeat.for="row of router.navigation">${row.title}</mdc-list-item> -->
-        <a href.bind="row.href" repeat.for="row of router.navigation">
-          <mdc-list-item>${row.title}</mdc-list-item>
-        </a>
-        <mdc-list-item click.delegate="logout()">Logout</mdc-list-item>
-      </mdc-list>
-    </mdc-drawer-persistent>
+  <mdc-toolbar id="toolbar">
+    <mdc-toolbar-row>
+      <mdc-toolbar-section start="true">
+        <a click.delegate="toggleMenu()" class="material-icons mdc-toolbar__menu-icon">menu</a>
+        <mdc-toolbar-title>Gotch Wars</mdc-toolbar-title>
+      </mdc-toolbar-section>
+    </mdc-toolbar-row>
+  </mdc-toolbar>
 
-    <!-- HEADER AREA -->
-    <div class="container-persistent-content">
-      <nav>
-        <mdc-toolbar>
-          <mdc-toolbar-row>
-            <mdc-toolbar-section start="true">
-              <a click.delegate="toggleMenu()" class="material-icons mdc-toolbar__menu-icon">menu</a>
 
-              <mdc-toolbar-title>
-                <a route-href="route: welcome">
-                  Gotch Wars
-                </a>
-              </mdc-toolbar-title>
-            </mdc-toolbar-section>
-          </mdc-toolbar-row>
-        </mdc-toolbar>
-      </nav>
+  <mdc-drawer-temporary open.bind="isOpen">
+    <mdc-drawer-spacer class="mdc-typography--headline">
+    </mdc-drawer-spacer>
 
-      <!-- MAIN AREA -->
-      <div class="container-persistent-main">
-        <!-- <template replaceable part="main-content"></template> -->
-        <slot></slot>
-      </div>
+    <mdc-list tag="nav" click.delegate="toggleMenu()">
+      <a href.bind="route.href" repeat.for="route of router.navigation
+          | authRouteFilter & signal: 'auth:state:changed'">
+        <mdc-list-item>
+          <i class="material-icons list-icon" aria-hidden="true">
+            ${route.settings.icon}
+          </i>
+          ${route.title}
+        </mdc-list-item>
+      </a>
 
-    </div>
-  </div>
+      <mdc-list-item click.delegate="logout()">
+        <i class="material-icons list-icon" aria-hidden="true">exit_to_app</i>
+        Logout
+      </mdc-list-item>
+    </mdc-list>
+  </mdc-drawer-temporary>
 
 </template>
