--- a/src/login.html
+++ b/src/login.html
@@ -1,10 +1,12 @@
 <template>
   <require from="firebaseui/dist/firebaseui.css"></require>
 
-  <section>
-    <h1>Welcome to Gotch Wars</h1>
+  <article id="login">
+    <header>
+      <h1>Welcome to Gotch Wars</h1>
+    </header>
 
     <div id="firebaseui-auth-container"></div>
-  </section>
+  </article>
 
 </template>
