--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,10 @@
   <require from="./nav-bar"></require>
   <require from="./login"></require>
 
-  <header>
+  <!-- for only Desktop-->
+  <!-- <header>
     <nav-bar></nav-bar>
-  </header>
+  </header> -->
 
 
   <mdc-linear-progress
@@ -14,15 +15,18 @@
     open.bind="true"
     indeterminate.bind="true"
     buffer.bind="0.6"
-    class="linear-progress-secondary">
+    class="linear-progress">
   </mdc-linear-progress>
 
 
   <main>
-    <article>
-      <router-view if.bind="auth.isLoggedIn"></router-view>
+    <router-view if.bind="auth.isLoggedIn"></router-view>
 
-      <login else></login>
-    </article>
+    <login else></login>
   </main>
+
+  <!-- https://material.io/design/components/app-bars-bottom.html#behavior -->
+  <footer>
+    <nav-bar></nav-bar>
+  </footer>
 </template>
