--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -1,11 +1,8 @@
 <template>
   <require from="firebaseui/dist/firebaseui.css"></require>
 
-  <article id="login">
-    <header>
-      <h1>Welcome to Gotch Wars</h1>
-    </header>
-
+  <article id="sign-in">
+    <!-- Firebase AuthenticationUI will render sign in components -->
     <div id="firebaseui-auth-container"></div>
   </article>
 
